[project]
name = "agents-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agent-framework>=1.4.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]

[tool.ruff.lint]
# I = isort (import sorting); extends ruff's defaults (F + E4/E7/E9)
extend-select = ["I"]
