[project]
name = "agents-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "agent-framework>=1.9",
    "agent-framework-core>=1.9",
    "graphviz>=0.21",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]

[tool.ruff.lint]
# I = isort (import sorting); extends ruff's defaults (F + E4/E7/E9)
extend-select = ["I"]
# Still flag unused imports, but don't auto-delete them on save
unfixable = ["F401"]
